network-policy-demo/server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server
  labels:
    app: secure-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
